[gd_scene load_steps=2 format=3 uid="uid://ctjaq0pa6l32w"]

[ext_resource type="Script" path="res://Scripts/Building nodes/Entity/Boxes/aim_assist.gd" id="1_5qdrx"]

[node name="aim_assist" type="Node2D"]
script = ExtResource("1_5qdrx")

[node name="up_raycast" type="RayCast2D" parent="."]
target_position = Vector2(150, -60)
collision_mask = 10

[node name="up_mid_raycast" type="RayCast2D" parent="."]
target_position = Vector2(185, -30)
collision_mask = 8

[node name="mid_raycast" type="RayCast2D" parent="."]
target_position = Vector2(200, 0)
collision_mask = 8

[node name="down_mid_raycast" type="RayCast2D" parent="."]
target_position = Vector2(185, 30)
collision_mask = 8

[node name="down_raycast" type="RayCast2D" parent="."]
target_position = Vector2(150, 60)
collision_mask = 8
